--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -60,7 +60,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 ```js
 {
   progress: {
-    finished: 37,
+    finished: 38,
     skipped: 9,
     total: 363
   },
@@ -93,7 +93,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 18. ~~Wingman (TamTam) - 1984~~ (_Japanese only_)
 19. [King's Quest: Quest for the Crown (Sierra On-Line)]({% post_url 2021-08-06-kings-quest %}) - 1984
 20. [The Crimson Crown - Further Adventures in Transylvania (Penguin Software)]({% post_url 2023-02-15-the-crimson-crown-further-adventures-in-transylvania %}) - 1985
-21. Déjà Vu: A Nightmare Comes True (ICOM Simulations) - 1985
+21. [Déjà Vu: A Nightmare Comes True (ICOM Simulations)]({% post_url 2023-04-11-deja-vu %}) - 1985
 22. Perry Mason: The Case of the Mandarin Murder (Telarium) - 1985
 23. King's Quest II: Romancing the Throne (Sierra On-Line) - 1985
 24. The Black Cauldron (Sierra On-Line) - 1986
