--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -79,7 +79,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 4. Cranston Manor (On-Line Systems) - 1981
 5. [Ulysses and the Golden Fleece (On-Line Systems)]({% post_url 2021-08-08-ulysses-and-the-golden-fleece %}) - 1981
 6. Adventureland (Adventure International) - 1982
-7. [Kabul Spy (Sirius Software)]({post_url 2023-02-07-kabul-spy %}) - 1982
+7. [Kabul Spy (Sirius Software)]({% post_url 2023-02-07-kabul-spy %}) - 1982
 8. Time Zone (On-Line Systems) - 1982
 9. [Transylvania (Penguin Software)]({% post_url 2021-08-24-transylvania %}) - 1982
 10. The Dark Crystal (On-Line Systems) - 1983
