--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -7,11 +7,9 @@ categories: ["Let's Adventure!"]
 tags: [series, adventure]
 pin: true
 image:
-  src: /images/adventure/bg.jpg
-  alt: Title Image
+  path: /images/adventure/bg.jpg
+  alt: "image credit: <a href='https://freegametips.com/point-n-click-a-genre-full-of-magic-humor-and-intelligence/'>Point-n-click, a genre full of magic, humor and intelligence</a>"
 ---
-<small><em>Image credit: ["Point-n-click, a genre full of magic, humor and intelligence"](https://freegametips.com/point-n-click-a-genre-full-of-magic-humor-and-intelligence/)</em></small>
-
 When I was growing up in the 80's my favourite games to play were adventure games. I've always found myself going back to this genre, and as I grew up and moved into software development the [ScummVM](https://www.scummvm.org/) project held a certain appeal as it combined two passions for me.
 
 Though I was never very active in the project, I tried to contribute in various ways over the years, finally seeing some success recently with the [Asylum engine being merged](https://www.alexbevi.com/blog/2021/05/19/scummvm-asylum-engine/).
@@ -69,9 +67,8 @@ As I work through the list I'll link the reviews below. You can also find the re
 ```
 <hr>
 
-<div class="note info">
-<small>The list below was generated on July 28, 2021 and may have diverged from what is currently listed on Wikipedia</small>
-</div>
+> The list below was generated on July 28, 2021 and may have diverged from what is currently listed on Wikipedia
+{: .prompt-tip }
 
 1. [Mystery House (On-Line Systems)]({% post_url 2021-08-03-mystery-house %}) - 1980
 2. [Wizard and the Princess (On-Line Systems)]({% post_url 2022-12-30-wizard-and-the-princess %}) - 1980
