--- a/_posts/2023-02-07-kabul-spy.markdown
+++ b/_posts/2023-02-07-kabul-spy.markdown
@@ -5,9 +5,7 @@ date: 2023-02-07 16:03:31 -0500
 comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "Sirius Software"]
-image:
-  src: /images/adventure/kabulspy/kabul-spy-04.png
-  alt: Title Image
+image: /images/adventure/kabulspy/kabul-spy-04.png
 ---
 _This review is part of the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %})._
 
