--- a/_posts/2023-03-03-duckman.markdown
+++ b/_posts/2023-03-03-duckman.markdown
@@ -5,9 +5,7 @@ date: 2023-03-03 05:34:56 -0500
 comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "The Illusions Gaming Company",	"Playmates Interactive Entertainment", Illusions]
-image:
-  src: /images/adventure/duckman/scummvm-duckman-00000.png
-  alt: Title Image
+image: /images/adventure/duckman/scummvm-duckman-00000.png
 ---
 _This review is part of the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %})._
 
