--- a/_posts/2023-04-11-deja-vu.markdown
+++ b/_posts/2023-04-11-deja-vu.markdown
@@ -5,9 +5,7 @@ date: 2023-04-11 12:11:59 -0400
 comments: true
 categories: ["Let's Adventure!"]
 tags: [adventure, "ICOM Simulations", "Mindscape", "Kemco", MacVenture]
-image:
-  src: /images/adventure/dejavu/deja-vu-01.png
-  alt: Title Image
+image: /images/adventure/dejavu/deja-vu-01.png
 ---
 _This review is part of the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %})._
 
