--- a/_posts/2023-03-03-duckman.markdown
+++ b/_posts/2023-03-03-duckman.markdown
@@ -7,7 +7,8 @@ categories: ["Let's Adventure!"]
 tags: [adventure, "The Illusions Gaming Company",	"Playmates Interactive Entertainment", Illusions]
 image: /images/adventure/duckman/scummvm-duckman-00000.png
 ---
-_This review is part of the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %})._
+> This review is part of the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
+{: .prompt-info }
 
 [Duckman: The Graphic Adventures of a Private Dick](https://en.wikipedia.org/wiki/Duckman:_The_Graphic_Adventures_of_a_Private_Dick) is a point-and-click adventure video game developed by the Illusions Gaming Company and published by Playmates Interactive based on the American television series, [Duckman](https://en.wikipedia.org/wiki/Duckman). In the game, Duckman has been usurped by a similar-looking impersonator, whom the real Duckman must expose.
 
