--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -55,7 +55,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 43  -%}
+{%- assign games_finished = 44  -%}
 {%- assign games_skipped  = 12  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -249,7 +249,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 174. BloodNet (MicroProse) - 1994
 175. Commander Blood (Cryo Interactive) - 1994
 176. Return to Ringworld (Tsunami Games) - 1994
-177. Dreamweb (Creative Reality) - 1994
+177. [DreamWeb (Creative Reality)]({% post_url 2023-05-18-dreamweb %}) - 1994
 178. Gadget: Invention, Travel, & Adventure (Synergy, Inc.) - 1994
 179. Hell: A Cyberpunk Thriller (Take-Two Interactive Software) - 1994
 180. Igor: Objective Uikokahonia (Pendulo Studios) - 1994
