--- a/_posts/2023-05-18-dreamweb.markdown
+++ b/_posts/2023-05-18-dreamweb.markdown
@@ -10,10 +10,71 @@ image: /images/adventure/dreamweb/scummvm-dreamweb-cd-00000.png
 > This review is part of the ["Let's Adventure!"]({% post_url 2021-07-28-adventure-games-1980-1999 %}) series. See all reviewed games sorted by rating [here]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 {: .prompt-info }
 
+[DreamWeb](https://en.wikipedia.org/wiki/DreamWeb) is an MS-DOS and Amiga point-and-click cyberpunk top-down adventure game released in 1994, developed by Creative Reality and published by Empire Interactive Entertainment. The game features mature themes and a dark plot filled with violence and brief full frontal nudity; a rarity for games at the time.
+
+You play as Ryan, a bartender in a futuristic city who's been having weird dreams of an entity known as the Dreamweb. In the dream that opens the game, Ryan is asked by the master monk of the Keepers to be the deliverer and kill the seven evils, who are united to break the Dreamweb and send mankind spiraling into chaos.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00031.png)
+
+ScummVM announced support for DreamWeb in May of 2012, and though I tried it out at the time I honestly didn't like the game. I'm pretty sure this was because I didn't really do anything more than load it, try to move around, get thoroughly confused and quit. To appreciate this game you need to actually read the material that it's distributed with (the _"Diary of a (Mad?) Man"_ - which is available for free on the ScummVM site) as it helps setup the backstory.
+
+The interface is also a very different as you only get about 33% of the screen dedicated to the game world. The rest is taken up by a top bar that gives you tools like save/load/inspect, and down the left hand side of the screen is a large view of Ryan. This actually acts as your inventory access as well as a zoom window so you can more closely inspect things on screen you may want to interact with.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00006.png)
+_Nothing like barging into the can to have a conversation while someone's taking a shit_
+
+Each screen is static and doesn't scroll, though as you move the mouse around you'll find hotspots called out in the zoom window that you can interact with. If you can move in a certain direction this will be shown using arrows, and if there are characters on screen you can interact with, they'll spill their line of dialogue along with a voice-acted version of the text.
+
+There's no branching dialogue trees in this game, which is kind of a nice change. Everyone has a fixed message they want to relay, and once they've done that you can either ask them to repeat it or move along.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00014.png)
+
+You can interact with almost every single element of the environment that has a label. When you do so, depending on what it is you've selected you may be presented with additional interaction options in the top right of the screen indicating actions you can take. This is sort of the verb menu you'd get in other adventure games, though I have to admit I found this more contextual approach a lot more intuitive.
+
+This is how you can pick up items, combine items and talk to people.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00018.png)
+_I guess if you gotta go, go out with a "bang" ..._
+
+As the monks have selected you to terminate the 7 evils, ultimately your goal is to hunt down these individuals and murder them. Killing the first target is sort of the hardest as it's sort of like the "training mission" to get you acclimated to the game, controls, world and story. Figuring out how to get a gun is a bit challenging, and figuring out where the first target (David Crane) is takes some trial and error.
+
+You basically just need to click on everything, inspect everything, talk to everyone and try using everything you've picked up on everything you come across. This is standard adventure game fare, but I found for some reason this game was a bit more confusing to "get the hang of" - possibly due to the interface feeling so different than typical Sierra Online or LucasArts style games.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00027.png)
+
+Trying to figure out where to go next may seem challenging, but once you've given yourself a chance to get used to the controls and the flow of this game, it actually progresses in a very linear fashion. Ryan will call out new information in a very obvious way, and traveling to new locations is just a matter of going outside and selecting from the list of available locations.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00033.png)
+
+From the travel screen you can cycle through all available locations, as well as get information about each by clicking the note icon in the upper right hand side of the screen. As you move around the game world and inspect everything and talk to everyone, you'll slowly learn various door codes and network logins and passwords. You'll need these to be able to explore all key locations as well as progress the story.
+
+Navigating the network unfortunately can be a bit confusing.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00021.png)
+
+There are only a couple of commands you actually need to use and these are documented in the manual under the _"The Network Monitor"_ section. The manual sort of hints at you needing to `LOGON RYAN` to get started, and that you'll need a password. If you read the material that comes with the game, the last page of the diary has your network password.
+
+You'll find various cartridges scattered throughout the game, which you can put into these network monitors and explore. Some of them require you to use a different login to access the contents, which you'll find by exploring.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00023.png)
+
+Almost everything can be picked up and carried with you, but you have very limited inventory space. Fortunately if you need to drop anything it will remain visible on the screen in case you need to come back later and pick it back up.
+
+This is actually an important mechanic in this game as more than once you'll find yourself needing to pick things up and immediately drop them because something might be hidden underneath. Because your inventory is limited to 30 slots, you'll want to make sure you carefully select what you do and don't carry around with you.
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00039.png)
+
+Overall I genuinely enjoyed playing this game. It's extremely dark and almost has a cyberpunk type of feel to it, especially once you finally finish the game only to realize your reward is being returned to your life to face the consequences of your actions. This results in a standoff with the police where they ultimately kill you, releasing your aura back to the Dreamweb for the cycle to being again.
+
+The ambient music playing throughout enhances the "Blade Runner"-esque nature of the game, though you're not chasing replicants here. I actually felt like DreamWeb would make a good addition to the cyberpunk genre along with titles like [Shadowrun]({% post_url 2016-02-23-just-finished-shadowrun %}) or [Rise of the Dragon]({% post_url 2023-02-13-rise-of-the-dragon %}).
+
+![](/images/adventure/dreamweb/scummvm-dreamweb-cd-00040.png)
+
 In October 2012, the creators and copyright holders of DreamWeb, Creative Reality and Neil Dodwell, released the game as freeware for use with ScummVM. It is available for download from [their Downloads page](https://www.scummvm.org/games/#games-dreamweb:dreamweb). Unlike the version [cracked by Razor1911](http://www.textfiles.com/piracy/RAZOR/dream.nfo), the freeware version includes the copy protection (guessing the pattern at the alter near the endgame) as well as the network logon passwords.
 
+Though extremely linear in nature, this game can be pretty challenging. You'll likely need a walkthrough to get through the Network Monitor stuff unless you're taking an extremely methodical and thorough approach to your playthrough.
 
-
+DreamWeb wasn't well received critically when it was released, but I think it's actually a very good entry in the pantheon of adventure games - and not one to miss. If you're a fan of more mature darker stories and are willing to do the work up front to read through the supporting material I think you'll really enjoy this gaming experience.
 
 **Game Information**
 
@@ -34,11 +95,11 @@ In October 2012, the creators and copyright holders of DreamWeb, Creative Realit
 
 See [here](https://www.alexbevi.com/blog/2021/07/28/adventure-games-1980-1999/#scoring) for a refresher on how we're scoring these games.
 
-|**Atmosphere (20)**|x|
-|**Story (25)**|x|
-|**Experience (15)**|x|
-|**Impact (10)**|x|
-||**xx%**|
+|**Atmosphere (20)**|13|
+|**Story (25)**|15|
+|**Experience (15)**|11|
+|**Impact (10)**|5|
+||**63%**|
 
 ### Gallery
 
@@ -48,7 +109,6 @@ See [here](https://www.alexbevi.com/blog/2021/07/28/adventure-games-1980-1999/#s
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00003.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00004.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00005.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00006.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00007.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00008.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00009.png
@@ -56,31 +116,22 @@ See [here](https://www.alexbevi.com/blog/2021/07/28/adventure-games-1980-1999/#s
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00011.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00012.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00013.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00014.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00015.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00016.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00017.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00018.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00019.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00020.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00021.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00022.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00023.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00024.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00025.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00026.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00027.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00028.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00029.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00030.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00031.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00032.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00033.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00034.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00035.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00036.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00037.png
 /images/adventure/dreamweb/scummvm-dreamweb-cd-00038.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00039.png
-/images/adventure/dreamweb/scummvm-dreamweb-cd-00040.png
 {% endgalleria %}
