--- a/_posts/2023-05-18-dreamweb.markdown
+++ b/_posts/2023-05-18-dreamweb.markdown
@@ -89,7 +89,7 @@ DreamWeb wasn't well received critically when it was released, but I think it's 
 
 |[*How Long To Beat?*](https://howlongtobeat.com/game/2882)|3.5 hours|
 |*Version Played*|DOS via [ScummVM](https://www.scummvm.org/)|
-|*Notes*|[Walkthrough](https://www.walkthroughking.com/text/aceventura.aspx)|
+|*Notes*|[Walkthrough](https://www.walkthroughking.com/text/dreamweb.aspx), [Manual](https://www.starehry.eu/download/adventure/docs/Dreamweb-Manual.pdf)|
 
 ### Score
 
