--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,8 +56,8 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 45  -%}
-{%- assign games_skipped  = 12  -%}
+{%- assign games_finished = 46  -%}
+{%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
 {
@@ -249,7 +249,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 173. The Bizarre Adventures of Woodruff and the Schnibble (Coktel Vision) - 1994
 174. BloodNet (MicroProse) - 1994
 175. Commander Blood (Cryo Interactive) - 1994
-176. Return to Ringworld (Tsunami Games) - 1994
+176. [Return to Ringworld (Tsunami Games)]({% post_url 2023-05-31-return-to-ringworld %}) - 1994
 177. [DreamWeb (Creative Reality)]({% post_url 2023-05-18-dreamweb %}) - 1994
 178. Gadget: Invention, Travel, & Adventure (Synergy, Inc.) - 1994
 179. Hell: A Cyberpunk Thriller (Take-Two Interactive Software) - 1994
@@ -360,7 +360,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 284. Titanic: Adventure Out of Time (Cyberflix) - 1996
 285. Leisure Suit Larry: Love for Sail! (Sierra On-Line) - 1996
 286. Phantasmagoria: A Puzzle of Flesh (Sierra On-Line) - 1996
-287. YU-NO: A girl who chants love at the bound of this world (ELF) - 1996
+287. ~~YU-NO: A girl who chants love at the bound of this world (ELF) - 1996~~ (_Japanese only, though a [2019 remake](https://www.spike-chunsoft.com/games/yu-no/) was localized_)
 288. Ark of Time (Trecision) - 1997
 289. The City of Lost Children (Psygnosis) - 1997
 290. Crusader: Adventure Out of Time (Index+) - 1997
